<resources>
    <string name="app_name" translatable="false">NgeStory</string>
    <string name="welcome">Hi! Welcome to</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">email</string>
    <string name="password" translatable="false">password</string>
    <string name="not_registered">Don\'t have account?</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="name">name</string>
    <string name="login_now">Login Now</string>
    <string name="have_account">Already have account?</string>

    // api response
    <string name="error_email_invalid">Invalid email!</string>
    <string name="error_fetch_data">Error fetching data!</string>
    <string name="error_invalid_login">Invalid email or password!</string>
    <string name="error_401">Wrong email or password, try again!</string>
    <string name="error_408">Poor internet connection, try again!</string>

    // error
    <string name="error_login">Error while login</string>
    <string name="error_register">Register failed!</string>

    <string name="error_invalid_input">Invalid input!</string>
    <string name="error_server">Something error with server. Try again later!</string>

    // UI error
    <string name="empty_image_description">Image and description must be filled!</string>
    <string name="empty_email_password">Email and Password must be filled!</string>
    <string name="invalid_email">Email format is invalid!</string>
    <string name="empty_email_password_name">Name, Email, and Password must be filled!</string>
    <string name="password_policy">Password at least 8 characters</string>
    <string name="permission_not_granted">Permission is not granted!</string>
    <string name="empty_image">Please input image for story!</string>
    <string name="empty_description">Description must be filled!</string>
    <string name="invalid_password">Invalid Password!</string>
    <string name="invalid_email_password">Invalid email and Password!</string>

    // UI success
    <string name="successful_register">Register Successful! Please login using the registered email and password!</string>
    <string name="success_upload_image">Story success uploaded!</string>
    <string name="app_logo_ngestory" translatable="false">app logo NgeStory</string>


    <string name="dismiss">DISMISS</string>
    <string name="stories" translatable="false">Stories</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="story_content_image" translatable="false">Story content image</string>
    <string name="add_story">Create</string>
    <string name="language">Language</string>
    <string name="change">Change</string>
    <string name="logout">Logout</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="submit">SUBMIT</string>
    <string name="retry">Retry</string>
    <string name="current_location">Use Current Location</string>
    <string name="use_marked_location">Use Marked Location</string>
    <string name="click_on_the_map">Click on the map to choose location</string>
    <string name="location_not_found">Location not found!</string>
    <string name="used_location">Are you sure to use this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_point">Start Point</string>
    <string name="icon_location">Icon Location</string>
    <string name="choose_your_location">Choose your location!</string>
    <string name="success_logout">Successful Logout!</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="maps">Maps</string>
</resources>