<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.AddStoryActivity"
    android:id="@+id/layout_add_story">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/img_picker"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/add_image_anim" />

        <Button
            android:id="@+id/btn_gallery"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:icon="@drawable/baseline_add_24"
            android:layout_marginTop="16dp"
            android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_picker" />

        <Button
            android:id="@+id/btn_camera"
            style="@style/Widget.Material3.Button.TonalButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_marginEnd="48dp"
            app:icon="@drawable/baseline_camera_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_gallery" />

        <LinearLayout
            android:id="@+id/ll_detail_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery"
            app:layout_constraintEnd_toEndOf="@+id/img_picker"
            app:layout_constraintStart_toStartOf="@+id/img_picker">

            <ImageView
                android:id="@+id/img_location"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_location_on_24"
                android:contentDescription="@string/icon_location" />

            <TextView
                android:id="@+id/tv_detail_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:maxLines="3"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/choose_your_location"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/description"
            app:boxBackgroundColor="@color/fade_cream"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_detail_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLines="15"
                android:minLines="6"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextField" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_anim" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>