<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.maps.PickLocationActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_maps"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_current_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_maps"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_current_location"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/current_location"
        android:layout_marginBottom="16dp"
        app:icon="@drawable/baseline_my_location_24"
        app:layout_constraintBottom_toTopOf="@+id/btn_marked_location"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_marked_location"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="48dp"
        android:text="@string/use_marked_location"
        app:icon="@drawable/baseline_add_location_alt_24"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/click_on_the_map"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>